Simplified code and updated jSerialComm maven package version